refactor: 전체적인 리팩토링(변수명, 메소드명 변경, 코드 압축, 불필요한 주석 제거)